# gitlab-tui

./: Cargo.toml  README.md
.github/workflows/: mirror.yaml  release.yaml  rust.yaml
src/: app.rs  args.rs  main.rs
src/api/: mod.rs
src/handlers/: details.rs  issuelist.rs  mod.rs  mrlist.rs  root.rs
src/ui/: detail.rs  main_ui.rs  mod.rs  types.rs
