[package]
name = "gitlab-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
ratatui = "0.20"
tokio = { version = "1.28.2", features = ["full"] }
gitlab = {version = "0.1600.1"}

