[package]
name = "gitlab-tui"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Treml"]
description = "A terminal based UI for interacting with your gitlab issues and merge requests"
keywords = ["gitlab", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
repository = "https://github.com/NiklasTreml/gitlab-tui"
documentation = "https://github.com/NiklasTreml/gitlab-tui"
homepage = "https://github.com/NiklasTreml/gitlab-tui"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
ratatui = "0.20"
tokio = { version = "1.28.2", features = ["full"] }
git2 = {version = "0.17.2", features = ["vendored-openssl"]}
gitlab = {version = "0.1600.1"}
url = "2.4.0"
thiserror = "1.0.40"
netrc-rs = "0.1.2"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
dirs = "5.0.1"


[[bin]]
bench = false
path = "src/main.rs"
name = "gitlab-tui"
